# maestro

./: .gitignore  .gitmodules  LICENSE  README  install-fuerte.sh  install-hubo-ach.sh  install.sh  run-hubo-ach.sh  run.sh
maestro/: CMakeLists.txt  README.txt  addLicense.sh  install-ros-diamondback-openrave.sh  install.sh  jaemi_hubo.launch.xml  maestro.py  manifest.xml  run.sh  setup.sh  utils.sh
maestro/Maestro/: .cproject  .project  CMakeLists.txt
maestro/config/: config.txt  power
maestro/docs/: NamingScheme.txt  maestro-architecture.ai  maestro_manual.tex
maestro/gestures/: armPitch.ops  armRoll.ops  dance.ops  fold.ops  harmonic.ops  loop.ops  newscript.ops  otherscript.ops  rep.ops  repREP.ops  repRSR.ops  repRSY.ops  testLatency.ops  testure.ops  testureLeft.ops
maestro/hubo_ctrl/: hubo_ctrl.launch  hubo_ctrl.xml  mainpage.dox
maestro/include/: CanGateway.h  CommHandler.h  CommsGateway.h  FTSensorBoard.h  HuboMotor.h  HuboState.h  IMUBoard.h  MotorBoard.h  Names.h  PowerControlBoard.h  Property.h  RobotControl.h  RosGateway.h  Trajectory.h  can4linux.h  huboCan.h
maestro/launch/: hubo_ctrl.xml  jaemi_hubo.launch.xml  jaemi_hubo.launch.xml.bak  robot_can.xml  robot_control.xml
maestro/models/: hubo_default.xml  hubo_testrig.xml
maestro/msg/: HuboCtrl.msg
maestro/orocos/: .pydevproject  .tb_history  manifest.xml
maestro/pyScripts/: HandShakeScript.py  MaestroCommandTest.py  MaestroController.py  MaestroGUI.py  PythonInterpreterGuide.txt  PythonSetup.py  SimpleGui.py  sound.py  soundDemo.py
maestro/src/: CanGateway.cpp  CommHandler.cpp  (+23 more)
(+355 files in other folders)
